# calculator_test

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: Doxyfile  my_header.tex
docs/output/html/: Calculator_8cpp.html  Calculator_8cpp__incl.map  Calculator_8cpp__incl.md5  Calculator_8cpp_source.html  annotated.html  classCalculator-members.html  classCalculator.html  classCalculator.js  classCalculator__coll__graph.map  classCalculator__coll__graph.md5  classCalculator__inherit__graph.map  classCalculator__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  include_2Calculator_8h.html  include_2Calculator_8h.js  include_2Calculator_8h__incl.map  include_2Calculator_8h__incl.md5  include_2Calculator_8h_source.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_source.html  namespaceUi.html  (+10 more)
docs/output/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_7.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
include/: Calculator.h
src/: CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.ui  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp  test_logic.cpp
